--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: color_world
-description: "A new Flutter project."
+description: "A colorful world coloring app for kids - explore colors from around the world!"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  # For custom painting and drawing
+  flutter_svg: ^2.0.9
+  # For state management
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
